<resources>
    <string name="app_name">Health App</string>
    <string name="action_settings">Settings</string>
    <string name="health">Health</string>
    <string name="community">Community</string>
    <string name="education">Education</string>
    <string name="books">Books</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="description_health">Purlieus provides users in need of immediate healthcare services or blood to contact people who are willing to help.</string>
    <string name="description_community">Be it helping underprivileged people or contributing towards community service, with Purlieus Community, users can help make this world a better place.</string>
    <string name="description_books">Book lovers can rejoice, as the app offers a platform for book lending and sharing among people within the user\'s proximity.</string>
    <string name="about">About</string>
    <string name="title_activity_maps">Map</string>

    <string name="blood_donation">Blood Donation</string>
    <string name="blood_group">Blood Group : </string>
    <string name="sex">Sex : </string>
    <string name="age">Age : </string>
    <string name="contact">Phone : </string>
    <string name="select_blood_group_recipient">Blood Group of Recipient:</string>
    <string name="edit_details">Edit Details</string>
    <string name="description_edit_privacy">The app will broadcast the details from the user profile to all matched users within proximity, unless the data is made private.</string>
    <string name="make_details_public">Make Details Public</string>
    <string name="make_details_private">Make Details Private</string>
    <string name="set_privacy">Private Donation</string>
    <string name="continue_seek">Continue</string>
    <string name="seekers_unavailable">Currently, there are no public seekers in your proximity.</string>
    <string name="seeker_notified">You will be notified once any seeker is available in your area.</string>
    <string name="set_urgency">Urgent Seek</string>
    <string name="description_edit_urgency">Enable/Disable this mode according to the condition of the patient seeking blood.</string>
    <string name="select_blood_group_donor">Blood Group of Donor:</string>
    <string name="donate">Donate</string>

    <string name="donors_unavailable">Currently, there are no public donors in your proximity.</string>
    <string name="donor_notified">All available donors in your area have been notified. Check back later for public donors.</string>

        <string name="profile_name">Name</string>
        <string name="profile_sex">Sex</string>
        <string name="profile_age">Age</string>
        <string name="profile_blood_group">Blood Group</string>
        <string name="email">E-mail</string>
        <string name="profile_contact">Contact</string>
        <string name="select_address">Select Address</string>
        <string name="select_bg">Blood Group:</string>
        <string name="input_details">Input Details</string>
        <string name="submit_details">Submit</string>
        <string name="save_details">Save</string>
        <string name="details">Details</string>
        <string name="age_display">Age:</string>
        <string name="sex_display">Sex:</string>
        <string name="phone_display">Phone:</string>
        <string name="email_display">E-mail:</string>
        <string name="address_display">Address:</string>
        <string name="address">Address</string>
        <string name="enter_details">Enter Details</string>
        <string name="phone">Phone</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="urgent">Urgent</string>
</resources>