<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/padding_half"
    android:paddingBottom="@dimen/padding_default"
    android:paddingTop="@dimen/padding_default">


    <ImageView
        android:id="@+id/item_seeker_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:alpha="0.54"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:src="@drawable/ic_profile"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/padding_2x"
        android:layout_marginStart="@dimen/padding_2x">

        <TextView
            android:id="@+id/donor_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="@dimen/typography_title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_half"
                android:background="@color/teal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/donor_blood_group_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/typography_subheading"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dividerColor"
            android:layout_marginTop="@dimen/padding_half"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_half">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/typography_body"

                        />

                    <TextView
                        android:id="@+id/donor_contact_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/app_name"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/typography_body"
                        android:paddingRight="@dimen/padding_default"
                        android:paddingLeft="10dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/typography_body"
                        />
                    <TextView
                        android:id="@+id/donor_sex_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/app_name"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/typography_body"
                        android:paddingLeft="10dp"
                        android:paddingRight="@dimen/padding_default"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/typography_body" />

                    <TextView
                        android:id="@+id/donor_age_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/app_name"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/typography_body"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>
                </LinearLayout>/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/phone"
        android:padding="3dp"
        android:id="@+id/donor_call_button"
        android:layout_weight="0"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default"/>

</LinearLayout>

